--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         <!--Block 9-10 end-->
 
         <!--Block ira-->
-        <section class="deal-of-the-month">
+<!--         <section class="deal-of-the-month">
             <h2 class="text-deal-of-the-month">DEAL OF THE MONTH<span class="red_pointer">.</span></h2>
             <p class="text-puma-sports">PUMA SPORTS BRA $50 $70</p>
             <p class="text-start-your">Start your fitness story right away with this comfortable bra and get
@@ -377,12 +377,12 @@
                 of our discount.</p>
             <a class="text-more-details" href="#more-details">More Details</a>
             <!-- <img class="de" src="img/deal-of-the-month/stretch-women.jpg" alt="Stretching woman"> -->
-            <div class="countdown">
+<!--             <div class="countdown">
                 <p>Here must be countdown</p>
             </div>
-        </section>
+        </section> -->
 
-        <div>
+<!--         <div>
             <p class="text-arrivals">NEW ARRIVALS.</p>
             <p class="text-be-first">Be the first to buy new items by leading brands.</p>
             <button class="text-more-product">More product</button>
@@ -424,7 +424,7 @@
                 <p>$200,00</p>
                 <button>Add to Card</button>
             </div>
-        </div>
+        </div> -->
         <!--Block ira end-->
 
         <!--Pavlo-->
@@ -454,7 +454,7 @@
             </div>
         </div>
         <!--END Pavlo-->
-        <div id="blog">
+<!--         <div id="blog">
             <section>
                 <h3>Blog</h3>
                 <p>Read the latest articles from our experts.</p>
@@ -463,7 +463,7 @@
                     <h2>No blogposts yet..</h2>
                 </article>
             </section>
-        </div>
+        </div> -->
         <div class="our-newsletter">
             <div class="text-offer">
                 <div class="icon-offer">
